# ecg_simulator

./: .gitignore  README.md  pyproject.toml
examples/: damping.py  dumping.py  psd.py  resp.py  rr.py  rrsim.py  single.py  stat.py  usage.py
js/: ecg_simulator.js  index.html  wave_patterns.json
src/ecg_simulator/: core.py
tests/: psd.py  rr.py
tools/: audit_scenarios.py
web/: index.html  script.js  style.css
